# SlicerAAL3BrainLabeling

./: AAL3BrainLabeling.py  CMakeLists.txt  LICENSE.txt  README.md
